smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/metadata/metadata-with-byte-text-block-key.smithy
// Syntax error at line 2, column 10: Expected one of IDENTIFIER, STRING('"'); but found BYTE_TEXT_BLOCK('b"""\nfoo"""') | Model
metadata b"""
foo""" = "baz"
